--- a/.github/workflows/espidf-compile.yml
+++ b/.github/workflows/espidf-compile.yml
@@ -38,4 +38,4 @@ jobs:
       with:
         esp_idf_version: ${{ matrix.idf_version }}
         target: ${{ matrix.idf_target }}
-        path: 'PlayPeriodic'
+        path: 'GetStarted'
