--- a/.github/workflows/espidf-compile.yml
+++ b/.github/workflows/espidf-compile.yml
@@ -20,7 +20,11 @@ jobs:
       fail-fast: false
       matrix:
         idf_version:
+          - release-v4.4
+          - release-v5.0
+          - release-v5.1
           - release-v5.2
+          - release-v5.3
         idf_target:
           - esp32
           - esp32s2
@@ -39,7 +43,4 @@ jobs:
         esp_idf_version: ${{ matrix.idf_version }}
         target: ${{ matrix.idf_target }}
         path: 'GetStarted'
-      with:
-        esp_idf_version: ${{ matrix.idf_version }}
-        target: ${{ matrix.idf_target }}
-        path: 'PlayPeriodic'
+
