--- a/.github/workflows/espidf-compile.yml
+++ b/.github/workflows/espidf-compile.yml
@@ -30,6 +30,9 @@ jobs:
           - esp32s2
           - esp32c3
           - esp32s3
+        idf_path:
+          - GetStarted
+          - PlayWithGpio
 
     runs-on: ubuntu-latest
     steps:
@@ -42,5 +45,5 @@ jobs:
       with:
         esp_idf_version: ${{ matrix.idf_version }}
         target: ${{ matrix.idf_target }}
-        path: 'GetStarted'
+        path: ${{ matrix.idf_path }}
 
