--- a/.github/workflows/espidf-compile.yml
+++ b/.github/workflows/espidf-compile.yml
@@ -33,6 +33,7 @@ jobs:
         idf_path:
           - GetStarted
           - PlayWithGpio
+          - PlayWithCron
 
     runs-on: ubuntu-latest
     steps:
