--- a/PlayWithMQTT/main/CMakeLists.txt
+++ b/PlayWithMQTT/main/CMakeLists.txt
@@ -1,4 +1,3 @@
-set(component_srcs "main.c" "mqtt_sub.c")
+set(srcs "main.c" "mqtt_sub.c")
 
-idf_component_register(SRCS "${component_srcs}"
-                       INCLUDE_DIRS ".")
+idf_component_register(SRCS "${srcs}" INCLUDE_DIRS "." EMBED_TXTFILES root_cert.pem)
